# hyprtile

./: .clangd  .gitignore  Makefile  README.md  flake.nix  hyprpm.toml  meson.build
src/: OverviewPassElement.cpp  OverviewPassElement.h  dispatchers.cpp  dispatchers.h  globals.h  main.cpp  overview.cpp  overview.h  utils.cpp  utils.h
src/overview/: config.hpp  globals.hpp  init.cpp  init.hpp  input.cpp  manager.cpp  manager.hpp  overview.cpp  overview.hpp  render.cpp  render.hpp  types.hpp  view.cpp
src/overview/layout/: column.cpp  column.hpp  grid.cpp  layout_base.cpp  layout_base.hpp  linear.cpp
